Merge-70 [AF] Get account from PDM instead of IdentityManager

Actually Two changes bundled here

1) Get account from Personal data manager instead of IdentityManager
2) (Small helper method) Personal datamanager changes to denote fullsync user or not that can be propagated to rest of the Autofill module.
Goal is to send it to payment RPCs.

TBR=sebsg@chromium.org

(cherry picked from commit 8d49fdc6886c4750151ef4a2f962b841fe4a8848 [formerly 7ba5ea846937be95a60328d783cec459296f32d9])

Bug: 880861, 840703
Change-Id: I61422018c9fe6755f7315ccc692ab6245ed754da
Reviewed-on: https://chromium-review.googlesource.com/1184030
Commit-Queue: Sebastien Seguin-Gagnon <sebsg@chromium.org>
Reviewed-by: Mathieu Perreault <mathp@chromium.org>
Reviewed-by: Sebastien Seguin-Gagnon <sebsg@chromium.org>
Reviewed-by: David Roger <droger@chromium.org>
Reviewed-by: Marc Treib <treib@chromium.org>
Cr-Original-Commit-Position: refs/heads/master@{#588608}
Reviewed-on: https://chromium-review.googlesource.com/1208137
Cr-Commit-Position: refs/branch-heads/3538@{#67}
Cr-Branched-From: 57781ff9a8651bc653184f680b0a4d8b92b6971f [formerly 79f7c91a2b2a2932cd447fa6f865cb6662fa8fa6]-refs/heads/master@{#587811}
Former-commit-id: 590bda625954a92561db163f71d4e58679ff9e6c