components/autofill/core/browser/payments/full_card_request_unittest.cc
@@ -81,7 +81,7 @@ class FullCardRequestTest : public testing::Test {
     autofill_client_.SetPrefs(std::move(pref_service));
     payments_client_ = std::make_unique<PaymentsClient>(
         test_shared_loader_factory_, autofill_client_.GetPrefs(),
-        autofill_client_.GetIdentityManager());
+        autofill_client_.GetIdentityManager(), &personal_data_);
     request_ = std::make_unique<FullCardRequest>(
         &autofill_client_, payments_client_.get(), &personal_data_);
     // Silence the warning from PaymentsClient about matching sync and Payments
